Added support for Virtual Threads